# check_deb_release

./: .gitignore  .pre-commit-config.yaml  README.md  check_deb_release.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
