[project]
name = "check-deb-release"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apt-repo>=0.5",
    "nagiosplugin>=1.4.0",
    "natsort>=8.4.0",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
